-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.10.0 FF
-
None
-
-
f9c43a37b (dev), 294ed7c52 (6.9), d87d3b89a (6.8)
/Users/qt/work/qt/qtapplicationmanager/src/tools/packager/packagingjob.cpp:140:13: error: ignoring return value of function declared with 'nodiscard' attribute [-Werror,-Wunused-result] irfile.open(QFile::ReadOnly); ^~~~~~ ~~~~~~~~~~~~~~~ 1 error generated.
Details: https://testresults.qt.io/coin/integration/qt/qtapplicationmanager/tasks/1736401098
Tested changes (refs/builds/qtci/dev/1736401097):
https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/610347/1 Bump version to 6.10.0
https://codereview.qt-project.org/c/qt/qtapplicationmanager/+/614819/2 Update dependencies on 'dev' in qt/qtapplicationmanager
- clones
-
QTBUG-132585 error: ignoring return value of function declared with 'nodiscard' attribute [-Werror,-Wunused-result]
-
- Closed
-