Fix more compilation issues with Qt 6.10 (nodiscard)

Amends ba88f9e584f2ff593c680024ca25d85434be2c53.

Fixes: QTBUG-132693
Change-Id: I988ba476ec5d51c019047b2eab1c9a03459c4d0b
Reviewed-by: Robert Griebl <robert.griebl@qt.io>
(cherry picked from commit f9c43a37b40e5bef3ffdee27533cc57aff6f15ec)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 294ed7c5249d47cb08e09a6a8267e3bc065de1e7)